[tool.poetry]
name = "u.s.s&p500select"
version = "0.1.0"
description = "Filter eligible stocks from A\u001b[D\u001b[U.S.SP500"
authors = ["zbgzbgzbg <2946876366@qq.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
